fixed length/spacing with content button and added max-width for content component when moving from mobile to desktop

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -7,7 +7,7 @@ button {
   color: #fff;
   font-size: 16px;
   width: 100%;
-  max-width: 140px;
+  max-width: 150px;
   cursor: pointer;
 
   &:hover {
