--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -1,7 +1,8 @@
 .content {
   position: relative;
   margin-top: 50px;
-  min-height: 270px;
+  max-width: 600px;
+  min-height: 280px;
   max-height: 500px;
   display: -webkit-box;
   display: -ms-flexbox;
