--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,8 +4,8 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 0 20px;
   z-index: 10;
   gap: 4rem;
@@ -41,13 +41,13 @@ nav .bars {
     gap: 2rem;
     height: 100%;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 }
 
 .navMenu__item {
-  color: dimgray;
+  color: hsl(0, 0%, 41%);
 }
 
 .navMenu__item a {
@@ -70,8 +70,8 @@ nav .bars {
     display: flex;
     gap: 2rem;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     margin-left: auto;
   }
   .buttonContainer a {
